--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=eb61c6a24ff6a04053b608cf7b0b9c4c
 ###< symfony/framework-bundle ###
 
@@ -26,7 +26,16 @@ APP_SECRET=eb61c6a24ff6a04053b608cf7b0b9c4c
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+#DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+
+#DATABASE_URL=mysql://root:root@localhost:33306/FoundTexas
+#DATABASE_URL="mysql://foundtex_rleon:TheReg630*@127.0.0.1:3306/foundtex_foundtexas?serverVersion=8.0.32&charset=utf8mb4"
+
+DATABASE_URL="mysql://foundtex_rleon:TheReg630*@foundtexas.net:3306/foundtex_foundtexas?serverVersion=8.0.32&charset=utf8mb4"
+#DATABASE_URL=mysql://root:root@mysql:3306/FoundTexas
+
+#DATABASE_URL=mysql://root:root@mysql:3306/FoundTexas 
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -39,3 +48,13 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+MAILER_DSN=gmail+smtp://rolega01@gmail.com:vybsoieyxhexvxgr@default?encryption=ssl
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
+
+GOOGLE_CLIENT_ID=472074994545-cpefrp0jtpba3ke5p15kh057cf5ohrd9.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
