--- a/.docker/apache/000-default.conf
+++ b/.docker/apache/000-default.conf
@@ -9,7 +9,7 @@
         #ServerName www.example.com
 
         ServerAdmin webmaster@localhost
-        DocumentRoot /var/www/html/public_html
+        DocumentRoot /var/www/html/public
 
         Alias /phpmyadmin /var/www/html/phpmyadmin
 
