--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "doctrine/orm": "^2.17",
         "dompdf/dompdf": "^2.0",
         "endroid/qr-code": "^5.0",
+        "knpuniversity/oauth2-client-bundle": "^2.18",
+        "league/oauth2-google": "^4.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.25",
         "symfony/asset": "6.4.*",
