--- a/.env
+++ b/.env
@@ -28,7 +28,8 @@ APP_SECRET=eb61c6a24ff6a04053b608cf7b0b9c4c
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 
-DATABASE_URL=mysql://root:root@localhost:33306/FoundTexas
+#DATABASE_URL=mysql://root:root@localhost:3306/FoundTexas
+DATABASE_URL=mysql://root:root@mysql:3306/FoundTexas
 
 #DATABASE_URL=mysql://root:root@mysql:3306/FoundTexas
 
@@ -51,3 +52,6 @@ MAILER_DSN=gmail+smtp://rolega01@gmail.com:vybsoieyxhexvxgr@default?encryption=s
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
+
+GOOGLE_CLIENT_ID=472074994545-cpefrp0jtpba3ke5p15kh057cf5ohrd9.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
