--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,21 +9,28 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+        oauth:
+            id: knpu.oauth2.user_provider
+    enable_authenticator_manager: true
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            
             lazy: true
             provider: app_user_provider
             form_login:
                 login_path: app_login
                 check_path: app_login
+                default_target_path: app_index
                 enable_csrf: true
             logout:
                 path: app_logout
-                # where to redirect after logout
-                # target: app_any_route
+                target: app_login
+                invalidate_session: false
+            custom_authenticators:
+                - App\Security\GoogleAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
