--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,11 @@
     RewriteCond %{REQUEST_FILENAME} !-f
 
     # Rewrite all other requests to index.php in the public directory.
-    RewriteRule ^(.*) public/index.php [L,QSA]
+    RewriteRule ^(.*) public/index.php [QSA]
 </IfModule>
+# php -- BEGIN cPanel-generated handler, do not edit
+# Configure el paquete “ea-php82” como el lenguaje de programación predeterminado “PHP”.
+<IfModule mime_module>
+  AddHandler application/x-httpd-ea-php82___lsphp .php .php8 .phtml
+</IfModule>
+# php -- END cPanel-generated handler, do not edit
