--- a/.htaccess
+++ b/.htaccess
@@ -1,19 +1,27 @@
+# php -- BEGIN cPanel-generated handler, do not edit
+# Configure el paquete “ea-php82” como el lenguaje de programación predeterminado “PHP”.
+<IfModule mime_module>
+    AddHandler application/x-httpd-ea-php82___lsphp .php .php8 .phtml
+</IfModule>
+# php -- END cPanel-generated handler, do not edit
+
 <IfModule mod_rewrite.c>
     RewriteEngine on
     RewriteOptions inherit
     
-    RewriteCond %{Request_URI} !^/\.well-known/acme-challenge/.+$
-    RewriteCond %{Request_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$
+    #SSL and Let's encrypt
+    RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/.+$
+    RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$ 
+
+    # redirect to no-www
+    RewriteBase/
+    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+    RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+
+    RewriteCond %{HTTPS} ≠on
+    RewriteRule. https://%{HTTP_HOST}%{REQUEST_URI} [R=301, L]
 
     # Check if the request is for an existing file or directory.
     RewriteCond %{REQUEST_URI} !public/
-
-    # Rewrite all other requests to index.php in the public directory.
     RewriteRule (.*) /public/$1 [L]
 </IfModule>
-# php -- BEGIN cPanel-generated handler, do not edit
-# Configure el paquete “ea-php82” como el lenguaje de programación predeterminado “PHP”.
-<IfModule mime_module>
-  AddHandler application/x-httpd-ea-php82___lsphp .php .php8 .phtml
-</IfModule>
-# php -- END cPanel-generated handler, do not edit
