--- a/.htaccess
+++ b/.htaccess
@@ -8,18 +8,12 @@
 <IfModule mod_rewrite.c>
     RewriteEngine on
     RewriteOptions inherit
-    
-    #SSL and Let's encrypt
-    RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/.+$
-    RewriteCond %{REQUEST_URI} !^/\.well-known/pki-validation/[A-F0-9]{32}\.txt(?:\ Comodo\ DCV)?$ 
 
-    # redirect to no-www
-    RewriteBase/
-    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-    RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
-
-    RewriteCond %{HTTPS} ≠on
-    RewriteRule. https://%{HTTP_HOST}%{REQUEST_URI} [R=301, L]
+    # Redirect www to non-www and enforce HTTPS
+    RewriteCond %{HTTPS} off [OR]
+    RewriteCond %{HTTP_HOST} ^www\. [NC]
+    RewriteCond %{HTTP_HOST} ^(?:www\.)?(.*)$ [NC]
+    RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
 
     # Check if the request is for an existing file or directory.
     RewriteCond %{REQUEST_URI} !public/
