--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=eb61c6a24ff6a04053b608cf7b0b9c4c
 ###< symfony/framework-bundle ###
 
@@ -29,7 +29,9 @@ APP_SECRET=eb61c6a24ff6a04053b608cf7b0b9c4c
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 
 #DATABASE_URL=mysql://root:root@localhost:33306/FoundTexas
-DATABASE_URL="mysql://foundtex_rleon:TheReg630*@127.0.0.1:3306/foundtex_foundtexas?serverVersion=8.0.32&charset=utf8mb4"
+#DATABASE_URL="mysql://foundtex_rleon:TheReg630*@127.0.0.1:3306/foundtex_foundtexas?serverVersion=8.0.32&charset=utf8mb4"
+
+DATABASE_URL="mysql://foundtex_rleon:TheReg630*@foundtexas.net:3306/foundtex_foundtexas?serverVersion=8.0.32&charset=utf8mb4"
 #DATABASE_URL=mysql://root:root@mysql:3306/FoundTexas
 
 #DATABASE_URL=mysql://root:root@mysql:3306/FoundTexas 
