--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,5 +1,7 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    globals:
+        gallery_directory: 'uploads/images/timeline_cv/'
 
 when@test:
     twig:
